add: agrego logs al gitignore. - Los logs no se guardan en el repositorio, estos logs son propios de cada instancia del contenedor. Por lo tanto no se comparten.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 airflow-standalone/logs/
 airflow-standalone/__pycache__/
 airflow-standalone/plugins/__pycache__/
+logs/
 
 # Python cache
 __pycache__/
