--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
-version: "3"
+version: '3.7'
 services:
+  # 1. Base de Datos
   postgres:
     image: postgres:13
     environment:
@@ -13,33 +14,64 @@ services:
       interval: 5s
       retries: 5
 
-  airflow:
-    image: apache/airflow:2.9.2
+  # 2. Contenedor de Inicialización
+  airflow-init:
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       postgres:
         condition: service_healthy
     environment:
-      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
-      - AIRFLOW__CORE__LOAD_EXAMPLES=False
       - AIRFLOW_UID=50000
-      - _PIP_ADDITIONAL_REQUIREMENTS=psycopg2-binary
+    volumes:
+      - ./dags:/opt/airflow/dags
+    command: >
+      bash -c "
+      airflow db migrate &&
+      airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true
+      "
+
+  # 3. Contenedor del Webserver
+  airflow-webserver:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      airflow-init:
+        condition: service_completed_successfully
+    environment:
+      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
+      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+      - AIRFLOW_UID=50000
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
-      - ./requirements.txt:/opt/airflow/requirements.txt
-    command: >
-      bash -c "
-      pip install -r /opt/airflow/requirements.txt &&
-      airflow db init &&
-      sleep 5 &&  
-      airflow db upgrade &&  
-      airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true &&
-      (airflow webserver & airflow scheduler)
-      "
     ports:
       - "8080:8080"
+    command: ["airflow", "webserver"] 
+    restart: always
+
+  # 4. Contenedor del Scheduler
+  airflow-scheduler:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      airflow-webserver:
+        condition: service_started
+    environment:
+      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
+      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+      - AIRFLOW_UID=50000
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
+      - ./plugins:/opt/airflow/plugins
+    command: ["airflow", "scheduler"]
+    restart: always
 
 volumes:
   postgres_data:
